# notter

./: .gitignore  LICENSE  README.md  index.html  ios-build.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: README.md  chat-integration.md  find-replace.md  ios-development-guide.md  ios-user-guide.md  note-linking.md  release-guide.md  search-architecture.md  search-developer-guide.md  search-implementation-summary.md  search-implementation.md  search-user-guide.md  tag-filtering.md  testing-guide.md  zettelkasten-subnotes.md
sample-notes/: 1-philosophy.md  10-future-planning.md  10a-career-development.md  1a-metaphysics.md  1a1-mind-body-problem.md  1b-epistemology.md  1b1-gettier-problems.md  links-example.txt  note-links.md  rust-tauri.md  sample.txt  visualization.md  welcome.md
src/: App.css  App.tsx  main.tsx  mobile.css  types.ts
src-tauri/: Cargo.toml  mobile.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: egui_main.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/notes/: mod.rs  subnotes.rs
src-tauri/src/search/: error.rs  mod.rs  service.rs
src-tauri/src/search/document/: mod.rs
src-tauri/src/search/index/: mod.rs  tantivy_index.rs
src-tauri/src/search/query/: mod.rs  tantivy_query.rs
src/components/: AddSubnoteButton.css  AddSubnoteButton.tsx  FindReplacePanel.tsx  MobileLayout.tsx  NewNoteButton.tsx  NoteList.tsx  NoteViewer.refactored.tsx  NoteViewer.tsx  Notifications.tsx  OptimizedNoteViewer.tsx  SearchPanel.tsx  TagFilter.tsx  (+3 more)
tests/: findReplace.test.ts
(+37 files in other folders)
