[package]
name = "notter-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notter_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
base64 = "0.21"
anyhow = "1.0"
tantivy = "0.21.0"
tempfile = "3.8.0"  # For temporary directories during testing
zstd-sys = "=2.0.8+zstd.1.5.5"  # Pin to a specific version to avoid compatibility issues
log = "0.4"  # Logging facade
env_logger = "0.10"  # Logging implementation
thiserror = "1.0"  # Error handling
natord = "1.0.9"  # Natural ordering for strings with numeric components
